--- a/PunchBot/MainWindow.xaml
+++ b/PunchBot/MainWindow.xaml
@@ -1,8 +1,17 @@
-﻿<Window x:Class="PunchBot.MainWindow"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:toolkit="http://schemas.microsoft.com/wpf/2008/toolkit"
+        xmlns:chartingToolkit="clr-namespace:System.Windows.Controls.DataVisualization.Charting;assembly=System.Windows.Controls.DataVisualization.Toolkit" x:Class="PunchBot.MainWindow"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        <Label>Hello world</Label>
+        <Label>
+            <chartingToolkit:Chart Title="Chart Title">
+                <chartingToolkit:Chart.DataContext>
+                    <PointCollection>1,10 2,20 3,30 4,40</PointCollection>
+                </chartingToolkit:Chart.DataContext>
+                <chartingToolkit:ColumnSeries DependentValuePath="X" IndependentValuePath="Y" ItemsSource="{Binding}"/>
+            </chartingToolkit:Chart>
+        </Label>
     </Grid>
 </Window>
