--- a/PunchBot/MainWindow.xaml
+++ b/PunchBot/MainWindow.xaml
@@ -6,10 +6,22 @@
         Title="MainWindow" Height="700" Width="900">
 
     <Grid >
-        <chartingToolkit:Chart  Name="lineChart" Title="Line Series Demo" VerticalAlignment="Top" Margin="0,0,0,0" Height="559"  >
-            <chartingToolkit:LineSeries  DependentValuePath="Value" IndependentValuePath="Key" ItemsSource="{Binding Points }" IsSelectionEnabled="True"/>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="560" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+
+        <chartingToolkit:Chart  Name="lineChart" VerticalAlignment="Top" Margin="0,0,0,0" Height="559"  >
+            <chartingToolkit:LineSeries Title="Strike 1"  DependentValuePath="Value" IndependentValuePath="Key" ItemsSource="{Binding Points }" IsSelectionEnabled="True"/>
+            <chartingToolkit:LineSeries Title="Strike 2"  DependentValuePath="Value" IndependentValuePath="Key" ItemsSource="{Binding Points }" IsSelectionEnabled="True"/>
+            <chartingToolkit:LineSeries Title="Strike 3"  DependentValuePath="Value" IndependentValuePath="Key" ItemsSource="{Binding Points }" IsSelectionEnabled="True" Margin="0,-30,0,0"/>
         </chartingToolkit:Chart>
-        <Button Content="load sample" Height="23" HorizontalAlignment="Left" Margin="538,564,0,0" Name="button1" VerticalAlignment="Top" Width="75" Click="button1_Click" />
-        <TextBox Name="textBox1" HorizontalAlignment="Left" Height="92" Margin="618,567,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="264" />
+
+        
+        <StackPanel Grid.Row="1" Orientation="Horizontal"  >
+            <Button Content="load sample" Height="23" HorizontalAlignment="Left"  Name="button1" VerticalAlignment="Top" Width="75" Click="button1_Click" />
+            <TextBox Name="textBox1" HorizontalAlignment="Left" Height="92" TextWrapping="Wrap" VerticalAlignment="Top" Width="112" />
+            <TextBox Name="textBox2" HorizontalAlignment="Left" Height="92" TextWrapping="Wrap" VerticalAlignment="Top" Width="109" />
+        </StackPanel>
     </Grid>
 </Window>
