--- a/Capture/MainWindow.xaml
+++ b/Capture/MainWindow.xaml
@@ -13,7 +13,7 @@
         </Grid.RowDefinitions>
 
         <chartingToolkit:Chart  Name="lineChart" VerticalAlignment="Top" Margin="0,0,0,0" Height="559"  >
-            <chartingToolkit:LineSeries Title="1" AnimationSequence="FirstToLast"  DependentValuePath="Value" IndependentValuePath="Key" ItemsSource="{Binding Points }" IsSelectionEnabled="True"/>
+            <!-- chartingToolkit:LineSeries Title="1" AnimationSequence="FirstToLast"  DependentValuePath="Value" IndependentValuePath="Key" ItemsSource="{Binding Points }" IsSelectionEnabled="True"/ -->
         </chartingToolkit:Chart>
 
         <StackPanel Grid.Row="1" Orientation="Horizontal"   >
@@ -22,6 +22,8 @@
 
         <StackPanel Grid.Row="2" Orientation="Horizontal"  >
             <TextBox x:Name="textBox1" HorizontalAlignment="Left" Height="76" TextWrapping="Wrap" VerticalAlignment="Top" Width="294" />
+            <TextBox x:Name="textBox2" HorizontalAlignment="Left" Height="76" TextWrapping="Wrap" VerticalAlignment="Top" Width="294" />
+      
         </StackPanel>
     </Grid>
 </Window>
