--- a/Capture/MainWindow.xaml
+++ b/Capture/MainWindow.xaml
@@ -2,28 +2,23 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:toolkit="http://schemas.microsoft.com/wpf/2008/toolkit"
+        xmlns:local="clr-namespace:PunchBot"
         xmlns:chartingToolkit="clr-namespace:System.Windows.Controls.DataVisualization.Charting;assembly=System.Windows.Controls.DataVisualization.Toolkit" x:Class="PunchBot.Capture.MainWindow"
         Title="MainWindow" Height="700" Width="900">
 
     <Grid >
         <Grid.RowDefinitions>
             <RowDefinition Height="550" />
-            <RowDefinition Height="auto"  />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
-        <chartingToolkit:Chart  Name="lineChart" VerticalAlignment="Top" Margin="0,0,0,0" Height="559"  >
+        <chartingToolkit:Chart  Name="lineChart" VerticalAlignment="Top" Margin="0,0,0,0" Height="550"  >
             <!-- chartingToolkit:LineSeries Title="1" AnimationSequence="FirstToLast"  DependentValuePath="Value" IndependentValuePath="Key" ItemsSource="{Binding Points }" IsSelectionEnabled="True"/ -->
         </chartingToolkit:Chart>
 
-        <StackPanel Grid.Row="1" Orientation="Horizontal"   >
-            <Button Content="Load Sample" Height="23" HorizontalAlignment="Left" Margin="5" x:Name="button1" VerticalAlignment="Top" Width="75" Click="button1_Click" />
-        </StackPanel>
-
-        <StackPanel Grid.Row="2" Orientation="Horizontal"  >
-            <TextBox x:Name="textBox1" HorizontalAlignment="Left" Height="76" TextWrapping="Wrap" VerticalAlignment="Top" Width="294" />
-            <TextBox x:Name="textBox2" HorizontalAlignment="Left" Height="76" TextWrapping="Wrap" VerticalAlignment="Top" Width="294" />
-      
+        <StackPanel Name="controlPanel" Grid.Row="1" Orientation="Horizontal"   >
+            <Button x:Name="AddInputButton" Content="+" Width="32" Margin="2,44,2,35" Click="AddInputButton_Click" FontWeight="Bold" FontSize="20"/>
+            <!-- local:SeriesInput x:Name="seriesInput1" / -->
         </StackPanel>
     </Grid>
 </Window>
