--- a/Capture/MainWindow.xaml
+++ b/Capture/MainWindow.xaml
@@ -2,8 +2,9 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:toolkit="http://schemas.microsoft.com/wpf/2008/toolkit"
-        xmlns:local="clr-namespace:PunchBot"
-        xmlns:chartingToolkit="clr-namespace:System.Windows.Controls.DataVisualization.Charting;assembly=System.Windows.Controls.DataVisualization.Toolkit" x:Class="PunchBot.Capture.MainWindow"
+        xmlns:local="clr-namespace:Capture"
+        xmlns:chartingToolkit="clr-namespace:System.Windows.Controls.DataVisualization.Charting;assembly=System.Windows.Controls.DataVisualization.Toolkit" 
+    x:Class="Capture.MainWindow"
         Title="MainWindow" Height="700" Width="900">
 
     <Grid >
