--- a/Capture/SeriesInput.xaml
+++ b/Capture/SeriesInput.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="PunchBot.SeriesInput" 
+﻿<UserControl x:Class="Capture.SeriesInput" 
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -18,7 +18,8 @@
         </StackPanel>
 
         <StackPanel Grid.Row="1" Orientation="Horizontal"  >
-            <TextBox x:Name="UserData" HorizontalAlignment="Left" Height="62" TextWrapping="Wrap" VerticalAlignment="Top" Width="180"/>
+            <TextBox x:Name="UserData" HorizontalAlignment="Left" Height="62" TextWrapping="Wrap" VerticalAlignment="Top" Width="118"/>
+            <Label x:Name="score" Height="62" Width="57" Content="99Nm" FontSize="20" />
         </StackPanel>
 
     </Grid>
