add clear button to SeriesInput ignore index 1 of data

--- a/Capture/SeriesInput.xaml
+++ b/Capture/SeriesInput.xaml
@@ -15,7 +15,7 @@
 
         <StackPanel Grid.Row="0" Orientation="Horizontal"   >
             <TextBox x:Name="UserName"   TextWrapping="Wrap" VerticalAlignment="Top" Width="113" ToolTip="Name" Height="23" TextChanged="UserName_TextChanged"/>
-            <Button Content="" Height="23" HorizontalAlignment="Left" Margin="5,0,0,0" x:Name="SampleButton" VerticalAlignment="Top" Width="22" Click="SampleButton_Click"  />
+            <Button Content="X" Height="23" HorizontalAlignment="Left" Margin="5,0,0,0" x:Name="SampleButton" VerticalAlignment="Top" Width="22" Click="SampleButton_Click"  />
         </StackPanel>
 
         <StackPanel Grid.Row="1" Orientation="Horizontal"  >
