--- a/Capture/SeriesInput.xaml
+++ b/Capture/SeriesInput.xaml
@@ -14,14 +14,15 @@
         </Grid.RowDefinitions>
 
         <StackPanel Grid.Row="0" Orientation="Horizontal"   >
-            <TextBox x:Name="UserName"   TextWrapping="Wrap" VerticalAlignment="Top" Width="113" ToolTip="Name" Height="23" TextChanged="UserName_TextChanged"/>
+            <TextBox x:Name="UserName"   TextWrapping="Wrap" VerticalAlignment="Top" Width="85" ToolTip="Name" Height="23" TextChanged="UserName_TextChanged"/>
             <Button Content="X" Height="23" HorizontalAlignment="Left" Margin="5,0,0,0" x:Name="SampleButton" VerticalAlignment="Top" Width="22" Click="SampleButton_Click"  />
+            <Button Content="+" HorizontalAlignment="Left" Margin="5,0,0,4.2" x:Name="FileButton" Width="22" Click="LoadButton_Click"  />
         </StackPanel>
 
         <StackPanel Grid.Row="1" Orientation="Horizontal"  >
             <TextBox x:Name="UserData" HorizontalAlignment="Left" Height="62" TextWrapping="Wrap" VerticalAlignment="Top" Width="140"/>
         </StackPanel>
-        
+
         <StackPanel Grid.Row="2" Orientation="Horizontal"  >
             <Label x:Name="score" Height="62" Width="57" Content="" FontSize="16" />
         </StackPanel>
